methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:3: error: not found: value c
  FaireMotif(c: Color)
             ^